--- a/insurance/insurance.ipynb
+++ b/insurance/insurance.ipynb
@@ -2,23 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext cudf.pandas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1200000, 26)\n"
+      "The cudf.pandas extension is already loaded. To reload it, use:\n",
+      "  %reload_ext cudf.pandas\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext cudf.pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1200000, 27)\n"
      ]
     },
     {
@@ -66,6 +75,7 @@
        "      <th>year</th>\n",
        "      <th>month</th>\n",
        "      <th>day</th>\n",
+       "      <th>dow</th>\n",
        "      <th>seconds</th>\n",
        "      <th>y</th>\n",
        "    </tr>\n",
@@ -97,6 +107,7 @@
        "      <td>2023.0</td>\n",
        "      <td>12.0</td>\n",
        "      <td>23.0</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>1.703345e+09</td>\n",
        "      <td>7.962067</td>\n",
        "    </tr>\n",
@@ -126,6 +137,7 @@
        "      <td>2023.0</td>\n",
        "      <td>6.0</td>\n",
        "      <td>12.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.686583e+09</td>\n",
        "      <td>7.302496</td>\n",
        "    </tr>\n",
@@ -155,6 +167,7 @@
        "      <td>2023.0</td>\n",
        "      <td>9.0</td>\n",
        "      <td>30.0</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>1.696087e+09</td>\n",
        "      <td>6.342121</td>\n",
        "    </tr>\n",
@@ -184,6 +197,7 @@
        "      <td>2024.0</td>\n",
        "      <td>6.0</td>\n",
        "      <td>12.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>1.718206e+09</td>\n",
        "      <td>6.641182</td>\n",
        "    </tr>\n",
@@ -213,6 +227,7 @@
        "      <td>2021.0</td>\n",
        "      <td>12.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>1.638372e+09</td>\n",
        "      <td>7.612337</td>\n",
        "    </tr>\n",
@@ -249,12 +264,12 @@
        "3 2024-06-12 15:21:39.226954              Poor            Yes   \n",
        "4 2021-12-01 15:21:39.252145              Poor            Yes   \n",
        "\n",
-       "  Exercise Frequency Property Type  Premium Amount    year  month   day  \\\n",
-       "0             Weekly         House          2869.0  2023.0   12.0  23.0   \n",
-       "1            Monthly         House          1483.0  2023.0    6.0  12.0   \n",
-       "2             Weekly         House           567.0  2023.0    9.0  30.0   \n",
-       "3              Daily     Apartment           765.0  2024.0    6.0  12.0   \n",
-       "4             Weekly         House          2022.0  2021.0   12.0   1.0   \n",
+       "  Exercise Frequency Property Type  Premium Amount    year  month   day  dow  \\\n",
+       "0             Weekly         House          2869.0  2023.0   12.0  23.0  5.0   \n",
+       "1            Monthly         House          1483.0  2023.0    6.0  12.0  0.0   \n",
+       "2             Weekly         House           567.0  2023.0    9.0  30.0  5.0   \n",
+       "3              Daily     Apartment           765.0  2024.0    6.0  12.0  2.0   \n",
+       "4             Weekly         House          2022.0  2021.0   12.0   1.0  2.0   \n",
        "\n",
        "        seconds         y  \n",
        "0  1.703345e+09  7.962067  \n",
@@ -264,7 +279,7 @@
        "4  1.638372e+09  7.612337  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,6 +293,7 @@
     "train[\"year\"] = train[\"Policy Start Date\"].dt.year.astype(\"float32\")\n",
     "train[\"month\"] = train[\"Policy Start Date\"].dt.month.astype(\"float32\")\n",
     "train[\"day\"] = train[\"Policy Start Date\"].dt.day.astype(\"float32\")\n",
+    "train[\"dow\"] = train[\"Policy Start Date\"].dt.dayofweek.astype(\"float32\")\n",
     "train[\"seconds\"] = (train[\"Policy Start Date\"].astype(\"int64\") // 10**9).astype(\"float32\") \n",
     "train[\"y\"] = np.log1p( train[\"Premium Amount\"] )\n",
     "print(train.shape)\n",
@@ -286,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +536,7 @@
        "4             Weekly         House  2021.0   11.0  26.0  1.637940e+09  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,35 +554,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "THE 22 BASIC FEATURES ARE:\n",
+      "THE 23 BASIC FEATURES ARE:\n",
       "Age (numerical) with 47 unique values\n",
-      "Gender (numerical) with 2 unique values\n",
+      "Gender (categorical) with 2 unique values\n",
       "Annual Income (numerical) with 97540 unique values\n",
-      "Marital Status (numerical) with 4 unique values\n",
+      "Marital Status (categorical) with 4 unique values\n",
       "Number of Dependents (numerical) with 5 unique values\n",
-      "Education Level (numerical) with 4 unique values\n",
-      "Occupation (numerical) with 4 unique values\n",
+      "Education Level (categorical) with 4 unique values\n",
+      "Occupation (categorical) with 4 unique values\n",
       "Health Score (numerical) with 640260 unique values\n",
-      "Location (numerical) with 3 unique values\n",
-      "Policy Type (numerical) with 3 unique values\n",
+      "Location (categorical) with 3 unique values\n",
+      "Policy Type (categorical) with 3 unique values\n",
       "Previous Claims (numerical) with 10 unique values\n",
       "Vehicle Age (numerical) with 20 unique values\n",
       "Credit Score (numerical) with 550 unique values\n",
       "Insurance Duration (numerical) with 9 unique values\n",
-      "Customer Feedback (numerical) with 4 unique values\n",
-      "Smoking Status (numerical) with 2 unique values\n",
-      "Exercise Frequency (numerical) with 4 unique values\n",
-      "Property Type (numerical) with 3 unique values\n",
+      "Customer Feedback (categorical) with 4 unique values\n",
+      "Smoking Status (categorical) with 2 unique values\n",
+      "Exercise Frequency (categorical) with 4 unique values\n",
+      "Property Type (categorical) with 3 unique values\n",
       "year (numerical) with 6 unique values\n",
       "month (numerical) with 12 unique values\n",
       "day (numerical) with 31 unique values\n",
+      "dow (numerical) with 7 unique values\n",
       "seconds (numerical) with 1826 unique values\n",
       "\n",
       "THE FOLLOWING HAVE 9 OR MORE UNIQUE VALUES: ['Age', 'Annual Income', 'Health Score', 'Previous Claims', 'Vehicle Age', 'Credit Score', 'Insurance Duration', 'month', 'day', 'seconds']\n"
@@ -607,30 +624,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "def target_encode(train, valid, test, col, target=\"y\", kfold=5, smooth=20, agg=\"mean\"):\n",
-    "  \n",
-    "  train[\"kfold\"] = ((train.index) % kfold)\n",
-    "  col_name = \"_\".join(col)\n",
-    "  train[f\"TE_{agg.upper()}\" + col_name]= 0.\n",
-    "  for i in range(kfold):\n",
+    "\n",
+    "    train['kfold'] = ((train.index) % kfold)\n",
+    "    col_name = '_'.join(col)\n",
+    "    train[f'TE_{agg.upper()}_' + col_name] = 0.\n",
+    "    for i in range(kfold):\n",
+    "        \n",
+    "        df_tmp = train[train['kfold']!=i]\n",
+    "        if agg==\"mean\": mn = train[target].mean()\n",
+    "        elif agg==\"median\": mn = train[target].median()\n",
+    "        elif agg==\"min\": mn = train[target].min()\n",
+    "        elif agg==\"max\": mn = train[target].max()\n",
+    "        elif agg==\"nunique\": mn = 0\n",
+    "        df_tmp = df_tmp[col + [target]].groupby(col).agg([agg, 'count']).reset_index()\n",
+    "        df_tmp.columns = col + [agg, 'count']\n",
+    "        if agg==\"nunique\":\n",
+    "            df_tmp['TE_tmp'] = df_tmp[agg] / df_tmp['count']\n",
+    "        else:\n",
+    "            df_tmp['TE_tmp'] = ((df_tmp[agg]*df_tmp['count'])+(mn*smooth)) / (df_tmp['count']+smooth)\n",
+    "        df_tmp_m = train[col + ['kfold', f'TE_{agg.upper()}_' + col_name]].merge(df_tmp, how='left', left_on=col, right_on=col)\n",
+    "        df_tmp_m.loc[df_tmp_m['kfold']==i, f'TE_{agg.upper()}_' + col_name] = df_tmp_m.loc[df_tmp_m['kfold']==i, 'TE_tmp']\n",
+    "        train[f'TE_{agg.upper()}_' + col_name] = df_tmp_m[f'TE_{agg.upper()}_' + col_name].fillna(mn).values  \n",
     "    \n",
-    "    df_tmp = train[train[\"kfold\"] != i]\n",
-    "    if agg == \"mean\": mn = train[target].mean()\n",
-    "    elif agg == \"min\": mn = train[target].min()\n",
-    "    elif agg == \"max\": mn = train[target].max()\n",
-    "    elif agg == \"nunique\": mn = 0\n",
-    "    df_tmp = df_tmp[col + [target]].groupby(col).agg([agg, \"count\"]).reset_index()\n",
-    "    \n",
-    "    "
+    "    df_tmp = train[col + [target]].groupby(col).agg([agg, 'count']).reset_index()\n",
+    "    if agg==\"mean\": mn = train[target].mean()\n",
+    "    elif agg==\"median\": mn = train[target].median()\n",
+    "    elif agg==\"min\": mn = train[target].min()\n",
+    "    elif agg==\"max\": mn = train[target].max()\n",
+    "    elif agg==\"nunique\": mn = 0\n",
+    "    df_tmp.columns = col + [agg, 'count']\n",
+    "    if agg==\"nunique\":\n",
+    "        df_tmp['TE_tmp'] = df_tmp[agg] / df_tmp['count']\n",
+    "    else:\n",
+    "        df_tmp['TE_tmp'] = ((df_tmp[agg]*df_tmp['count'])+(mn*smooth)) / (df_tmp['count']+smooth)\n",
+    "    df_tmp_m = valid[col].merge(df_tmp, how='left', left_on=col, right_on=col)\n",
+    "    valid[f'TE_{agg.upper()}_' + col_name] = df_tmp_m['TE_tmp'].fillna(mn).values\n",
+    "    valid[f'TE_{agg.upper()}_' + col_name] = valid[f'TE_{agg.upper()}_' + col_name].astype(\"float32\")\n",
+    "\n",
+    "    df_tmp_m = test[col].merge(df_tmp, how='left', left_on=col, right_on=col)\n",
+    "    test[f'TE_{agg.upper()}_' + col_name] = df_tmp_m['TE_tmp'].fillna(mn).values\n",
+    "    test[f'TE_{agg.upper()}_' + col_name] = test[f'TE_{agg.upper()}_' + col_name].astype(\"float32\")\n",
+    "\n",
+    "    train = train.drop('kfold', axis=1)\n",
+    "    train[f'TE_{agg.upper()}_' + col_name] = train[f'TE_{agg.upper()}_' + col_name].astype(\"float32\")\n",
+    "\n",
+    "    return(train, valid, test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -649,10 +697,162 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We have 20 powerful combination of columns!\n"
+     ]
+    }
+   ],
+   "source": [
+    "lists2 = [['Annual Income', 'Health Score'], ['Credit Score', 'Health Score'], ['Customer Feedback', 'Gender', 'Marital Status', 'Occupation', 'Smoking Status', 'year'], ['Exercise Frequency', 'Health Score'], ['Health Score', 'Marital Status'], ['Education Level', 'Gender', 'Health Score'], ['Health Score', 'Occupation'], ['Age', 'Health Score'], ['Health Score', 'dow'], ['Age', 'Exercise Frequency', 'Location'], ['Health Score', 'Smoking Status', 'month'], ['Health Score', 'Location', 'Policy Type'], ['Health Score', 'Insurance Duration'], ['Health Score', 'Number of Dependents'], ['Customer Feedback', 'Exercise Frequency', 'Previous Claims', 'Property Type', 'dow'], ['Customer Feedback', 'Health Score'], ['Health Score', 'Property Type'], ['Health Score', 'day', 'seconds'], ['Health Score', 'year'], ['Age', 'Gender', 'Insurance Duration', 'year']]\n",
+    "print(f\"We have {len(lists2)} powerful combination of columns!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#########################\n",
+      "### Fold 1\n",
+      "#########################\n",
+      "FEATURE ENGINEER 23 COLUMNS and 20 GROUPS: (1)['Age'] , (2)['Gender'] , (3)['Annual Income'] , (4)['Marital Status'] , (5)['Number of Dependents'] , (6)['Education Level'] , (7)['Occupation'] , (8)['Health Score'] , (9)['Location'] , (10)['Policy Type'] , (11)['Previous Claims'] , (12)['Vehicle Age'] , (13)['Credit Score'] , (14)['Insurance Duration'] , (15)['Customer Feedback'] , (16)['Smoking Status'] , (17)['Exercise Frequency'] , (18)['Property Type'] , (19)['year'] , (20)['month'] , (21)['day'] , (22)['dow'] , (23)['seconds'] , (24)['Annual Income', 'Health Score'] , (25)['Credit Score', 'Health Score'] , (26)['Customer Feedback', 'Gender', 'Marital Status', 'Occupation', 'Smoking Status', 'year'] , (27)['Exercise Frequency', 'Health Score'] , (28)['Health Score', 'Marital Status'] , (29)['Education Level', 'Gender', 'Health Score'] , (30)['Health Score', 'Occupation'] , (31)['Age', 'Health Score'] , (32)['Health Score', 'dow'] , (33)['Age', 'Exercise Frequency', 'Location'] , (34)['Health Score', 'Smoking Status', 'month'] , (35)['Health Score', 'Location', 'Policy Type'] , (36)['Health Score', 'Insurance Duration'] , (37)['Health Score', 'Number of Dependents'] , (38)['Customer Feedback', 'Exercise Frequency', 'Previous Claims', 'Property Type', 'dow'] , (39)['Customer Feedback', 'Health Score'] , (40)['Health Score', 'Property Type'] , (41)['Health Score', 'day', 'seconds'] , (42)['Health Score', 'year'] , (43)['Age', 'Gender', 'Insurance Duration', 'year'] , Feature engineering took 93.5 seconds\n",
+      "[0]\tvalidation_0-rmse:1.09576\n",
+      "[100]\tvalidation_0-rmse:1.03462\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "FOLDS = 20\n",
+    "from sklearn.model_selection import KFold\n",
+    "kf = KFold(n_splits=FOLDS, shuffle=True, random_state=42)\n",
+    "\n",
+    "oof = np.zeros(len(train))\n",
+    "pred = np.zeros(len(test))\n",
+    "\n",
+    "for i, (train_index, test_index) in enumerate(kf.split(train)):\n",
+    "\n",
+    "    print(\"#\"*25)\n",
+    "    print(f\"### Fold {i+1}\")\n",
+    "    print(\"#\"*25)\n",
+    "    \n",
+    "    x_train = train.loc[train_index,FEATURES+[\"y\"] ].copy()\n",
+    "    y_train = train.loc[train_index,\"y\"]\n",
+    "    x_valid = train.loc[test_index,FEATURES].copy()\n",
+    "    y_valid = train.loc[test_index,\"y\"]\n",
+    "    x_test = test[FEATURES].copy()\n",
+    "\n",
+    "    start = time.time()\n",
+    "    print(f\"FEATURE ENGINEER {len(FEATURES)} COLUMNS and {len(lists2)} GROUPS: \",end=\"\")\n",
+    "    for j,f in enumerate(FEATURES+lists2):\n",
+    "\n",
+    "        if j<len(FEATURES): c = [f]\n",
+    "        else: c = f \n",
+    "        print(f\"({j+1}){c}\",\", \",end=\"\")\n",
+    "\n",
+    "        # LOW CARDINALITY FEATURES - TARGET ENCODE MEAN AND MEDIAN\n",
+    "        x_train, x_valid, x_test = target_encode(x_train, x_valid, x_test, c, smooth=20, agg=\"mean\")\n",
+    "        x_train, x_valid, x_test = target_encode(x_train, x_valid, x_test, c, smooth=0, agg=\"median\")\n",
+    "\n",
+    "        # HIGH CARDINALITY FEATURES - TE MIN, MAX, NUNIQUE and CE\n",
+    "        if (j>=len(FEATURES)) | (c[0] in HIGH_CARDINALITY):\n",
+    "            x_train, x_valid, x_test = target_encode(x_train, x_valid, x_test, c, smooth=0, agg=\"min\")\n",
+    "            x_train, x_valid, x_test = target_encode(x_train, x_valid, x_test, c, smooth=0, agg=\"max\")\n",
+    "            x_train, x_valid, x_test = target_encode(x_train, x_valid, x_test, c, smooth=0, agg=\"nunique\")\n",
+    "    \n",
+    "            # COUNT ENCODING (USING COMBINED TRAIN TEST)\n",
+    "            tmp = combined.groupby(c).y.count()\n",
+    "            nm = f\"CE_{'_'.join(c)}\"; tmp.name = nm\n",
+    "            x_train = x_train.merge(tmp, on=c, how=\"left\")\n",
+    "            x_valid = x_valid.merge(tmp, on=c, how=\"left\")\n",
+    "            x_test = x_test.merge(tmp, on=c, how=\"left\")\n",
+    "            x_train[nm] = x_train[nm].astype(\"int32\")\n",
+    "            x_valid[nm] = x_valid[nm].astype(\"int32\")\n",
+    "            x_test[nm] = x_test[nm].astype(\"int32\")\n",
+    "            \n",
+    "    end = time.time()\n",
+    "    elapsed = end-start\n",
+    "    print(f\"Feature engineering took {elapsed:.1f} seconds\")\n",
+    "    x_train = x_train.drop(\"y\",axis=1)\n",
+    "\n",
+    "    model = XGBRegressor(\n",
+    "        device=\"cuda\",\n",
+    "        max_depth=8, \n",
+    "        colsample_bytree=0.9, \n",
+    "        subsample=0.9, \n",
+    "        n_estimators=2_000, \n",
+    "        learning_rate=0.01, \n",
+    "        early_stopping_rounds=25,  \n",
+    "        eval_metric=\"rmse\",\n",
+    "    )\n",
+    "    model.fit(\n",
+    "        x_train, y_train,\n",
+    "        eval_set=[(x_valid, y_valid)],   \n",
+    "        verbose=100\n",
+    "    )\n",
+    "\n",
+    "    # INFER OOF\n",
+    "    oof[test_index] = model.predict(x_valid)\n",
+    "    # INFER TEST\n",
+    "    pred += model.predict(x_test)\n",
+    "\n",
+    "    m = np.sqrt(np.mean( (y_valid.to_numpy() - oof[test_index])**2.0 )) \n",
+    "    print(f\" => Fold {i+1} RMSLE = {m:.5f}\")\n",
+    "\n",
+    "# COMPUTE AVERAGE TEST PREDS\n",
+    "pred /= FOLDS"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "m = np.sqrt(np.mean( (train.y.values - oof) ** 2.0))\n",
+    "print(f\"Overall CV RMSLE = {m:.5f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "fig, ax = plt.subplots(figsize=(10, 10))\n",
+    "xgb.plot_importance(\n",
+    "  model,\n",
+    "  ax=ax,\n",
+    "  max_num_features=25,\n",
+    "  importance_type=\"weight\",\n",
+    ")\n",
+    "plt.title(\"XGB Top 25 Feature Importances\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sub = pd.read_csv(\"dataset/sample_submission.csv\")\n",
+    "sub[\"Premium Amount\"] = np.exp( pred )-1\n",
+    "sub.to_csv(\"submission.csv\", index=False)\n",
+    "sub.head()"
+   ]
   }
  ],
  "metadata": {
