--- a/backpack/backpack.ipynb
+++ b/backpack/backpack.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,6 +49,191 @@
     "test = pd.read_csv(\"dataset/test.csv\")\n",
     "extra = pd.read_csv(\"dataset/training_extra.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>Brand</th>\n",
+       "      <th>Material</th>\n",
+       "      <th>Size</th>\n",
+       "      <th>Compartments</th>\n",
+       "      <th>Laptop Compartment</th>\n",
+       "      <th>Waterproof</th>\n",
+       "      <th>Style</th>\n",
+       "      <th>Color</th>\n",
+       "      <th>Weight Capacity (kg)</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Jansport</td>\n",
+       "      <td>Leather</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Tote</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>11.611723</td>\n",
+       "      <td>112.15875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Jansport</td>\n",
+       "      <td>Canvas</td>\n",
+       "      <td>Small</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Messenger</td>\n",
+       "      <td>Green</td>\n",
+       "      <td>27.078537</td>\n",
+       "      <td>68.88056</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Under Armour</td>\n",
+       "      <td>Leather</td>\n",
+       "      <td>Small</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Messenger</td>\n",
+       "      <td>Red</td>\n",
+       "      <td>16.643760</td>\n",
+       "      <td>39.17320</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Nike</td>\n",
+       "      <td>Nylon</td>\n",
+       "      <td>Small</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Messenger</td>\n",
+       "      <td>Green</td>\n",
+       "      <td>12.937220</td>\n",
+       "      <td>80.60793</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Adidas</td>\n",
+       "      <td>Canvas</td>\n",
+       "      <td>Medium</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Messenger</td>\n",
+       "      <td>Green</td>\n",
+       "      <td>17.749338</td>\n",
+       "      <td>86.02312</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id         Brand Material    Size  Compartments Laptop Compartment  \\\n",
+       "0   0      Jansport  Leather  Medium           7.0                Yes   \n",
+       "1   1      Jansport   Canvas   Small          10.0                Yes   \n",
+       "2   2  Under Armour  Leather   Small           2.0                Yes   \n",
+       "3   3          Nike    Nylon   Small           8.0                Yes   \n",
+       "4   4        Adidas   Canvas  Medium           1.0                Yes   \n",
+       "\n",
+       "  Waterproof      Style  Color  Weight Capacity (kg)      Price  \n",
+       "0         No       Tote  Black             11.611723  112.15875  \n",
+       "1        Yes  Messenger  Green             27.078537   68.88056  \n",
+       "2         No  Messenger    Red             16.643760   39.17320  \n",
+       "3         No  Messenger  Green             12.937220   80.60793  \n",
+       "4        Yes  Messenger  Green             17.749338   86.02312  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train_data\n",
+      "Number of Rows: 300000\n",
+      "Number of columns: 11\n",
+      "test_data\n",
+      "Number of Rows: 200000\n",
+      "Number of columns: 10\n",
+      "extra_data\n",
+      "Number of Rows: 3694318\n",
+      "Number of columns: 11\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_train_rows, num_train_columns = train.shape\n",
+    "num_test_rows, num_test_columns = test.shape\n",
+    "num_extra_rows, num_extra_columns = extra.shape\n",
+    "\n",
+    "print(\"train_data\")\n",
+    "print(f\"Number of Rows: {num_train_rows}\")\n",
+    "print(f\"Number of columns: {num_train_columns}\")\n",
+    "\n",
+    "print(\"test_data\")\n",
+    "print(f\"Number of Rows: {num_test_rows}\")\n",
+    "print(f\"Number of columns: {num_test_columns}\")\n",
+    "\n",
+    "print(\"extra_data\")\n",
+    "print(f\"Number of Rows: {num_extra_rows}\")\n",
+    "print(f\"Number of columns: {num_extra_columns}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
